# truenet

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
truenet/: truenet.py
truenet.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
truenet/scripts/: make_WMmask_flair  make_bianca_mask_2D.sh  prepare_truenet_data  truenet
truenet/true_net/: truenet_augmentation.py  truenet_commands.py  truenet_cross_validate.py  truenet_data_postprocessing.py  truenet_data_preparation.py  truenet_data_preprocessing.py  truenet_evaluate.py  truenet_finetune.py  truenet_help_messages.py  truenet_loo_validate.py  truenet_loss_functions.py  truenet_model.py  truenet_test_function.py  truenet_train.py  truenet_train_function.py
truenet/utils/: truenet_dataset_utils.py  truenet_model_utils.py  truenet_utils.py
